# omfg

./: .env.steamdeck.local.example  .gitignore  README.md
docker/: linux-amd64-builder.Dockerfile
docs/: implementation-status.md  omfg-wrapper-and-env-vars.md  rust-feature-roadmap.md  testing-strategy.md
docs/compat-journal/: 1196590-resident-evil-village.md  960990-beyond-two-souls.md  README.md
docs/targets/: steamdeck.md
experiments/: program.md
implementation/vk-layer-mvp/: CMakeLists.txt  README.md
implementation/vk-layer-mvp/layer/: VkLayer_OMFG_mvp.json.in  VkLayer_PPFG_mvp.json.in
implementation/vk-layer-mvp/src/: layer.cpp
implementation/vk-layer-rust/: README.md
research/: post-process-frame-gen-linux-research.md
research/fetch/: nvidia-fruc-guide.html  nvidia-gaming-linux.html  (+4 more)
scripts/: _omfg_layer_impl.sh  _steamdeck_env.sh  assert-vkcube-log.py  build-linux-amd64.sh  collect-steamdeck-display-info.sh  compare-benchmark-results.py  compile-rust-shaders.sh  deploy-steamdeck-layer.sh  run-advanced-steamdeck-validation.sh  run-autoperf-loop.sh  run-bfi-steamdeck-validation.sh  run-layer-regression-suite.sh  run-present-timing-steamdeck-validation.sh  run-steamdeck-benchmark-suite.sh  run-steamdeck-multi-count-sweep.sh  run-steamdeck-real-game-hot-reload-study.sh  run-target-fps-steamdeck-validation.sh  steamdeck-run.sh  steamdeck-scp-from.sh  steamdeck-scp-to.sh  summarize-benchmark-log.py  summarize-real-game-log.py  test-steamdeck-vkcube.sh  test-steamdeck-vkgears.sh
tests/: test_compare_benchmark_results.py
(+25 files in other folders)
